--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -385,7 +389,7 @@
                                 Quanto dettagliatamente devo spiegare il mio codice alla paperella di gomma?
                             </button>
                         </h2>
-                        <div id="faqCollapseThree" class="accordion-collapse collapse" aria-labelledby="faqHeadingThree"
+                        <div id="faqCollapseFour" class="accordion-collapse collapse" aria-labelledby="faqHeadingFour"
                             data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
                                 Dovresti spiegare ogni dettaglio del tuo codice. Più sei dettagliato, più è probabile
