Fix SVG icon paths for star ratings to ensure correct rendering

--- a/index.html
+++ b/index.html
@@ -142,21 +142,22 @@
                                 avrebbero fatto impazzire. È anche un ottimo antistress nelle giornate difficili!
                                 David William"</p>
                             <h5>David William - Feb 22, 2023</h5>
+                            <!-- TODO usare un ciclo per generare le stelle? -->
                             <div class="rating">
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
 
@@ -171,19 +172,19 @@
                             <h5>Emma Turner - April 5, 2023</h5>
                             <div class="rating">
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
                         </div>
@@ -197,19 +198,19 @@
                             <h5>Rachel Bryan - April 18, 2023</h5>
                             <div class="rating">
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
                         </div>
@@ -224,19 +225,19 @@
                             <h5>Park C - May 22, 2023</h5>
                             <div class="rating">
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
                         </div>
