Fix SVG icon paths to ensure correct loading of icons

--- a/index.html
+++ b/index.html
@@ -262,19 +262,19 @@
                         <figcaption>
                             <div class="rating">
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
                             <p class="duck-name">Cool Duck</p>
@@ -288,19 +288,19 @@
                         <figcaption>
                             <div class="rating">
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
                             <p class="duck-name">Classic Duck</p>
@@ -314,19 +314,19 @@
                         <figcaption>
                             <div class="rating">
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                                 <svg class="rating-icon mini">
-                                    <use href="assets/icons.svg#star-fill"></use>
+                                    <use href="/assets/icons.svg#star-fill"></use>
                                 </svg>
                             </div>
                             <p class="duck-name">Bat Duck</p>
@@ -419,7 +419,7 @@
         <section class="container my-5 row mx-auto" id="bullet-points">
             <div class="col-12 col-md-4 text-center p-4">
                 <svg class="bullet-icon">
-                    <use href="assets/icons.svg#balloon"></use>
+                    <use href="/assets/icons.svg#balloon"></use>
                 </svg>
                 <h3>Spedizione Veloce</h3>
                 <p>Ricevi la tua paperella di gomma in tempi rapidi con il nostro servizio di spedizione efficiente
@@ -427,7 +427,7 @@
             </div>
             <div class="col-12 col-md-4 text-center p-4 border-end border-start border-2">
                 <svg class="bullet-icon">
-                    <use href="assets/icons.svg#bag-heart"></use>
+                    <use href="/assets/icons.svg#bag-heart"></use>
                 </svg>
                 <h3>Garanzia Soddisfatti o Rimborsati</h3>
                 <p>Se non sei completamente soddisfatto della tua paperella di gomma, offriamo una garanzia di
@@ -435,7 +435,7 @@
             </div>
             <div class="col-12 col-md-4 text-center p-4">
                 <svg class="bullet-icon">
-                    <use href="assets/icons.svg#handiplast"></use>
+                    <use href="/assets/icons.svg#handiplast"></use>
                 </svg>
                 <h3>Assistenza Clienti Dedicata</h3>
                 <p>Il nostro team di assistenza clienti è sempre pronto ad aiutarti con qualsiasi domanda o problema
