--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubber Duck Debugging</title>
-    
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,7 +14,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2e45cc">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
@@ -29,49 +29,78 @@
 </head>
 
 <body id="top">
-        <header class="container-fluid my-5 p-0" >
-        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <nav class="navbar bg-body-tertiary sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Duck Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Duck Logo"></a>
                 <!-- TODO La navbar deve essere verticale e contenere il logo -->
-                <div class="collapse navbar-collapse flex-column" id="navbarSupportedContent">
+                <!-- Navbar Desktop -->
+                <div class="d-none d-lg-flex" id="navbarDesktop">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#top">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#top" data-bs-dismiss="offcanvas">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#punti-di-forza">I punti di forza</a>
+                            <a class="nav-link" href="#punti-di-forza" data-bs-dismiss="offcanvas">I punti di forza</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#recensioni">Recensioni</a>
+                            <a class="nav-link" href="#recensioni" data-bs-dismiss="offcanvas">Recensioni</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#paperelle">Paperelle</a>
+                            <a class="nav-link" href="#paperelle" data-bs-dismiss="offcanvas">Paperelle</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#faqs">FAQs</a>
+                            <a class="nav-link" href="#faqs" data-bs-dismiss="offcanvas">FAQs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#newsletter">Newsletter</a>
+                            <a class="nav-link" href="#newsletter" data-bs-dismiss="offcanvas">Newsletter</a>
                         </li>
                     </ul>
-                </div>
-            </div>
+                </div><!-- #navbarDesktop-->
+                <button class="d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div><!-- .container-fluid -->
         </nav><!-- .navbar  -->
-
+        <!-- OffCanvas Mobile -->
+        <div class="offcanvas offcanvas-end" id="navOffcanvas" tabindex="-1" aria-labelledby="offcanvasLabel">
+            <div class="offcanvas-header">
+                <img src="/img/logo.png" alt="Duck Logo" style="height: 40px;">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#top">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#punti-di-forza">I punti di forza</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#recensioni">Recensioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#paperelle">Paperelle</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#faqs">FAQs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#newsletter">Newsletter</a>
+                    </li>
+                </ul>
+            </div>
+        </div><!-- #navOffcanvas-->
+<header class="container-fluid p-0"></header>
         <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
         <div class="hero align-items-center m-0 p-0">
             <div class="hero-images row m-0 p-0">
                 <div class="col-md-6 col-12 m-0 p-0">
-                    <img src="img/banner-image.png" alt="Rubber Duck" class="img-fluid">
+                    <img src="/img/banner-image.png" alt="Rubber Duck" class="img-fluid">
                 </div>
                 <div class="col-md-6 col-12 position-relative m-0 p-0">
-                    <img src="img/banner-bg.png" alt="Code Example" class="img-fluid">
+                    <img src="/img/banner-bg.png" alt="Code Example" class="img-fluid">
                     <div class="overlay position-absolute top-50 start-50 translate-middle text-center text-white p-3">
                         <h1>Rubber Duck Debuggings</h1>
                         <p>Spiegare il codice ad una paperella di gomma aiuta i programmatori a chiarire il pensiero e
@@ -81,8 +110,8 @@
                 </div>
             </div>
         </div><!-- .hero  -->
-        </header>
-        <main class="container-fluid p-0 m-0">
+    </header>
+    <main class="container-fluid p-0 m-0">
         <!-- TODO Sezione punti di forza a 3 colonne con immagine occupante colonna di mezzo -->
         <section class="sell-points row mx-auto container" id="punti-di-forza">
             <div class="col-md-4 col-12 text-center p-4">
@@ -106,7 +135,7 @@
                 </div>
             </div>
             <div class="col-md-4 col-12 text-center p-4">
-                <img src="img/invisible.png" alt="Rubber Duck Feature" class="img-fluid">
+                <img src="/img/invisible.png" alt="Rubber Duck Feature" class="img-fluid">
             </div>
             <div class="col-md-4 col-12 text-center p-4">
                 <div class="reason-item">
@@ -258,7 +287,7 @@
             <div class="row">
                 <div class="col-md-4 col-12 mb-4">
                     <figure>
-                        <img src="img/product-item1.png" class="card-img-top" alt="cool-duck">
+                        <img src="/img/product-item1.png" class="card-img-top" alt="cool-duck">
                         <figcaption>
                             <div class="rating">
                                 <svg class="rating-icon mini">
@@ -284,7 +313,7 @@
                 </div>
                 <div class="col-md-4 col-12 mb-4">
                     <figure>
-                        <img src="img/product-item2.png" class="card-img-top" alt="Classic-duck">
+                        <img src="/img/product-item2.png" class="card-img-top" alt="Classic-duck">
                         <figcaption>
                             <div class="rating">
                                 <svg class="rating-icon mini">
@@ -310,7 +339,7 @@
                 </div>
                 <div class="col-md-4 col-12 mb-4">
                     <figure>
-                        <img src="img/product-item3.png" class="card-img-top" alt="Bat-duck">
+                        <img src="/img/product-item3.png" class="card-img-top" alt="Bat-duck">
                         <figcaption>
                             <div class="rating">
                                 <svg class="rating-icon mini">
@@ -339,7 +368,7 @@
         <!-- TODO area FAQ con accordion -->
         <section class="row mx-auto container" id="faqs">
             <div class="container my-5 col-md-6 col-12 mx-0 p-0">
-                <img src="img/single-image2.png" alt="FAQ Image" class="img-fluid" />
+                <img src="/img/single-image2.png" alt="FAQ Image" class="img-fluid" />
             </div>
             <div class="container my-5 col-md-6 col-12 mx-0 p-0">
                 <h2 class="text-center mb-4">Domande Frequenti</h2>
@@ -396,10 +425,9 @@
                         </div>
                     </div><!-- .accordion-item -->
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="faqHeadingThree">
+                        <h2 class="accordion-header" id="faqHeadingFour">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#faqCollapseThree" aria-expanded="false"
-                                aria-controls="faqCollapseThree">
+                                data-bs-target="#faqCollapseFour" aria-expanded="false" aria-controls="faqCollapseFour">
                                 Quanto dettagliatamente devo spiegare il mio codice alla paperella di gomma?
                             </button>
                         </h2>
