--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                 <button class="d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <svg width="30" height="30" class="hamburger-icon">
+    <use href="/assets/icons.svg#navbar-icon"></use>
+</svg>
                 </button>
             </div><!-- .container-fluid -->
         </nav><!-- .navbar  -->
