Add styles for offcanvas header image and adjust navbar structure

--- a/index.html
+++ b/index.html
@@ -29,89 +29,89 @@
 </head>
 
 <body id="top">
-        <nav class="navbar bg-body-tertiary sticky-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Duck Logo"></a>
-                <!-- TODO La navbar deve essere verticale e contenere il logo -->
-                <!-- Navbar Desktop -->
-                <div class="d-none d-lg-flex" id="navbarDesktop">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#top">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#punti-di-forza">I punti di forza</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#recensioni">Recensioni</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#paperelle">Paperelle</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#faqs">FAQs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#newsletter">Newsletter</a>
-                        </li>
-                    </ul>
-                </div><!-- #navbarDesktop-->
-                <button class="d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <svg width="30" height="30" class="hamburger-icon">
-    <use href="/assets/icons.svg#navbar-icon"></use>
-</svg>
-                </button>
-            </div><!-- .container-fluid -->
-        </nav><!-- .navbar  -->
-        <!-- OffCanvas Mobile -->
-        <div class="offcanvas offcanvas-end" id="navOffcanvas" tabindex="-1" aria-labelledby="offcanvasLabel">
-            <div class="offcanvas-header">
-                <img src="/img/logo.png" alt="Duck Logo" style="height: 40px;">
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav mb-2">
+    <nav class="navbar bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Duck Logo"></a>
+            <!-- TODO La navbar deve essere verticale e contenere il logo -->
+            <!-- Navbar Desktop -->
+            <div class="d-none d-lg-flex" id="navbarDesktop">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#top" data-bs-dismiss="offcanvas">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#top">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#punti-di-forza" data-bs-dismiss="offcanvas">I punti di forza</a>
+                        <a class="nav-link" href="#punti-di-forza">I punti di forza</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#recensioni" data-bs-dismiss="offcanvas">Recensioni</a>
+                        <a class="nav-link" href="#recensioni">Recensioni</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#paperelle" data-bs-dismiss="offcanvas">Paperelle</a>
+                        <a class="nav-link" href="#paperelle">Paperelle</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#faqs" data-bs-dismiss="offcanvas">FAQs</a>
+                        <a class="nav-link" href="#faqs">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#newsletter" data-bs-dismiss="offcanvas">Newsletter</a>
+                        <a class="nav-link" href="#newsletter">Newsletter</a>
                     </li>
                 </ul>
+            </div><!-- #navbarDesktop-->
+            <button class="d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <svg width="30" height="30" class="hamburger-icon">
+                    <use href="/assets/icons.svg#navbar-icon"></use>
+                </svg>
+            </button>
+        </div><!-- .container-fluid -->
+    </nav><!-- .navbar  -->
+    <!-- OffCanvas Mobile -->
+    <div class="offcanvas offcanvas-end" id="navOffcanvas" tabindex="-1" aria-labelledby="offcanvasLabel" data-bs-backdrop="false" data-bs-scroll="true">
+        <div class="offcanvas-header">
+            <img src="/img/logo.png" alt="Duck Logo">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav mb-2">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#top" data-bs-dismiss="offcanvas">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#punti-di-forza" data-bs-dismiss="offcanvas">I punti di forza</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#recensioni" data-bs-dismiss="offcanvas">Recensioni</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#paperelle" data-bs-dismiss="offcanvas">Paperelle</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#faqs" data-bs-dismiss="offcanvas">FAQs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#newsletter" data-bs-dismiss="offcanvas">Newsletter</a>
+                </li>
+            </ul>
+        </div>
+    </div><!-- #navOffcanvas-->
+    <header class="container-fluid p-0"></header>
+    <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
+    <div class="hero align-items-center m-0 p-0">
+        <div class="hero-images row m-0 p-0">
+            <div class="col-md-6 col-12 m-0 p-0">
+                <img src="/img/banner-image.png" alt="Rubber Duck" class="img-fluid">
             </div>
-        </div><!-- #navOffcanvas-->
-<header class="container-fluid p-0"></header>
-        <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
-        <div class="hero align-items-center m-0 p-0">
-            <div class="hero-images row m-0 p-0">
-                <div class="col-md-6 col-12 m-0 p-0">
-                    <img src="/img/banner-image.png" alt="Rubber Duck" class="img-fluid">
-                </div>
-                <div class="col-md-6 col-12 position-relative m-0 p-0">
-                    <img src="/img/banner-bg.png" alt="Code Example" class="img-fluid">
-                    <div class="overlay position-absolute top-50 start-50 translate-middle text-center text-white p-3">
-                        <h1>Rubber Duck Debuggings</h1>
-                        <p>Spiegare il codice ad una paperella di gomma aiuta i programmatori a chiarire il pensiero e
-                            individuare errori nascosti.</p>
-                        <a href="#" class="btn btn-outline-dark">ACQUISTALO SUBITO!</a>
-                    </div>
+            <div class="col-md-6 col-12 position-relative m-0 p-0">
+                <img src="/img/banner-bg.png" alt="Code Example" class="img-fluid">
+                <div class="overlay position-absolute top-50 start-50 translate-middle text-center text-white p-3">
+                    <h1>Rubber Duck Debuggings</h1>
+                    <p>Spiegare il codice ad una paperella di gomma aiuta i programmatori a chiarire il pensiero e
+                        individuare errori nascosti.</p>
+                    <a href="#" class="btn btn-outline-dark">ACQUISTALO SUBITO!</a>
                 </div>
             </div>
-        </div><!-- .hero  -->
+        </div>
+    </div><!-- .hero  -->
     </header>
     <main class="container-fluid p-0 m-0">
         <!-- TODO Sezione punti di forza a 3 colonne con immagine occupante colonna di mezzo -->
