--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav mb-2">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#top" data-bs-dismiss="offcanvas">Home</a>
+                    <a class="nav-link active offcanvas-nav-link" aria-current="page" href="#top" data-bs-dismiss="offcanvas">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#punti-di-forza" data-bs-dismiss="offcanvas">I punti di forza</a>
+                    <a class="nav-link offcanvas-nav-link" href="#punti-di-forza" data-bs-dismiss="offcanvas">I punti di forza</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#recensioni" data-bs-dismiss="offcanvas">Recensioni</a>
+                    <a class="nav-link offcanvas-nav-link" href="#recensioni" data-bs-dismiss="offcanvas">Recensioni</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#paperelle" data-bs-dismiss="offcanvas">Paperelle</a>
+                    <a class="nav-link offcanvas-nav-link" href="#paperelle" data-bs-dismiss="offcanvas">Paperelle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#faqs" data-bs-dismiss="offcanvas">FAQs</a>
+                    <a class="nav-link offcanvas-nav-link" href="#faqs" data-bs-dismiss="offcanvas">FAQs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#newsletter" data-bs-dismiss="offcanvas">Newsletter</a>
+                    <a class="nav-link offcanvas-nav-link" href="#newsletter" data-bs-dismiss="offcanvas">Newsletter</a>
                 </li>
             </ul>
         </div>
