--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
     <div class="offcanvas offcanvas-end" id="navOffcanvas" tabindex="-1" aria-labelledby="offcanvasLabel" data-bs-backdrop="false" data-bs-scroll="true">
         <div class="offcanvas-header">
             <img src="/img/logo.png" alt="Duck Logo">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
             <ul class="navbar-nav mb-2">
                 <li class="nav-item">
-                    <a class="nav-link active offcanvas-nav-link" aria-current="page" href="#top" data-bs-dismiss="offcanvas">Home</a>
+                    <a class="nav-link active offcanvas-nav-link" aria-current="page" href="#top">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link offcanvas-nav-link" href="#punti-di-forza" data-bs-dismiss="offcanvas">I punti di forza</a>
+                    <a class="nav-link offcanvas-nav-link" href="#punti-di-forza">I punti di forza</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link offcanvas-nav-link" href="#recensioni" data-bs-dismiss="offcanvas">Recensioni</a>
+                    <a class="nav-link offcanvas-nav-link" href="#recensioni">Recensioni</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link offcanvas-nav-link" href="#paperelle" data-bs-dismiss="offcanvas">Paperelle</a>
+                    <a class="nav-link offcanvas-nav-link" href="#paperelle">Paperelle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link offcanvas-nav-link" href="#faqs" data-bs-dismiss="offcanvas">FAQs</a>
+                    <a class="nav-link offcanvas-nav-link" href="#faqs">FAQs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link offcanvas-nav-link" href="#newsletter" data-bs-dismiss="offcanvas">Newsletter</a>
+                    <a class="nav-link offcanvas-nav-link" href="#newsletter">Newsletter</a>
                 </li>
             </ul>
         </div>
