Add responsive typography adjustments for smaller screens and fix typo in text

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h3>Resistente agli Spruzzi</h3>
                     <p>Perfetta per resistere ai piccoli incidenti con caffé e bevande, la tua paperella di gomma non
                         teme
-                        schizzi, mantenedoti sempre pronto per il debugging.</p>
+                        schizzi, mantenendoti sempre pronto per il debugging.</p>
                 </div>
                 <div class="reason-item">
                     <h3>Portabilità</h3>
