Add FAQ accordion styles and update HTML structure for better accessibility

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 </div>
                 <div class="container my-5 col-md-6 col-12 mx-0 p-0">
                     <h2 class="text-center mb-4">Domande Frequenti</h2>
-                    <div class="accordion" id="faqAccordion">
+                    <div class="accordion duck-faqs-accordion" id="faqAccordion">
                         <!-- FAQ items will go here -->
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="faqHeadingOne">
