Add newsletter button styles and update HTML structure for improved design

--- a/index.html
+++ b/index.html
@@ -495,7 +495,11 @@
                     id="newsletter-form">
                     <input type="email" class="form-control mb-3 mb-md-0 me-md-3" placeholder="Inserisci la tua email"
                         required>
-                    <button type="submit" class="btn btn-primary">Iscriviti</button>
+                    <button type="submit" class="newsletter-button">
+                        <svg class="newsletter-icon-svg">
+                            <use href="/assets/icons.svg#send"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </section><!-- .container #newsletter -->
