Change hero div to section for semantic HTML improvement

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div><!-- #navOffcanvas-->
         <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
-        <div class="hero align-items-center m-0 p-0">
+        <section class="hero align-items-center m-0 p-0">
             <div class="hero-images row m-0 p-0">
                 <div class="col-md-6 col-12 m-0 p-0">
                     <img src="/img/banner-image.png" alt="Rubber Duck" class="img-fluid">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-        </div><!-- .hero  -->
+        </section><!-- .hero  -->
     </header>
     <main class="container-fluid p-0 m-0">
         <!-- TODO Sezione punti di forza a 3 colonne con immagine occupante colonna di mezzo -->
