Add hero overlay styles and update HTML structure for improved layout

--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
             </div>
         </div><!-- #navOffcanvas-->
         <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
-        <section class="hero align-items-center m-0 p-0">
+        <section class="hero container align-items-center m-0 p-0">
             <div class="hero-images row m-0 p-0">
                 <div class="col-md-6 col-12 m-0 p-0">
                     <img src="/img/banner-image.png" alt="Rubber Duck" class="img-fluid">
                 </div>
                 <div class="col-md-6 col-12 position-relative m-0 p-0">
                     <img src="/img/banner-bg.png" alt="Code Example" class="img-fluid">
-                    <div class="overlay position-absolute top-50 start-50 translate-middle text-center text-white p-3">
+                    <div class="overlay position-absolute top-50 start-50 translate-middle text-center">
                         <h1>Rubber Duck Debuggings</h1>
                         <p>Spiegare il codice ad una paperella di gomma aiuta i programmatori a chiarire il pensiero e
                             individuare errori nascosti.</p>
-                        <a href="#" class="btn btn-outline-dark">ACQUISTALO SUBITO!</a>
+                        <a href="#" class="btn btn-outline-dark">ACQUISTALA SUBITO!</a>
                     </div>
                 </div>
             </div>
