Add hero section styles for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div><!-- #navOffcanvas-->
         <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
-        <section class="hero container align-items-center m-0 p-0">
+        <section class="hero container-fluid align-items-center m-0 p-0">
             <div class="hero-images row m-0 p-0">
                 <div class="col-md-6 col-12 m-0 p-0">
                     <img src="/img/banner-image.png" alt="Rubber Duck" class="img-fluid">
