--- a/index.html
+++ b/index.html
@@ -29,73 +29,73 @@
 </head>
 
 <body id="top">
-    <header>
-        <nav class="navbar bg-body-tertiary sticky-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Duck Logo"></a>
-                <!-- TODO La navbar deve essere verticale e contenere il logo -->
-                <!-- Navbar Desktop -->
-                <div class="d-none d-lg-flex" id="navbarDesktop">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#top">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#punti-di-forza">I punti di forza</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#recensioni">Recensioni</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#paperelle">Paperelle</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#faqs">FAQs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#newsletter">Newsletter</a>
-                        </li>
-                    </ul>
-                </div><!-- #navbarDesktop-->
-                <button class="d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <svg width="30" height="30" class="hamburger-icon">
-                        <use href="/assets/icons.svg#navbar-icon"></use>
-                    </svg>
-                </button>
-            </div><!-- .container-fluid -->
-        </nav><!-- .navbar  -->
-        <!-- OffCanvas Mobile -->
-        <div class="offcanvas offcanvas-end" id="navOffcanvas" tabindex="-1" aria-labelledby="offcanvasLabel"
-            data-bs-backdrop="false" data-bs-scroll="true">
-            <div class="offcanvas-header">
-                <img src="/img/logo.png" alt="Duck Logo">
-               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav mb-2">
+    <nav class="navbar bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Duck Logo"></a>
+            <!-- TODO La navbar deve essere verticale e contenere il logo -->
+            <!-- Navbar Desktop -->
+            <div class="d-none d-lg-flex" id="navbarDesktop">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active offcanvas-nav-link" aria-current="page" href="#top">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#top">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link offcanvas-nav-link" href="#punti-di-forza">I punti di forza</a>
+                        <a class="nav-link" href="#punti-di-forza">I punti di forza</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link offcanvas-nav-link" href="#recensioni">Recensioni</a>
+                        <a class="nav-link" href="#recensioni">Recensioni</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link offcanvas-nav-link" href="#paperelle">Paperelle</a>
+                        <a class="nav-link" href="#paperelle">Paperelle</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link offcanvas-nav-link" href="#faqs">FAQs</a>
+                        <a class="nav-link" href="#faqs">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link offcanvas-nav-link" href="#newsletter">Newsletter</a>
+                        <a class="nav-link" href="#newsletter">Newsletter</a>
                     </li>
                 </ul>
-            </div>
-        </div><!-- #navOffcanvas-->
+            </div><!-- #navbarDesktop-->
+            <button class="d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#navOffcanvas" aria-controls="navOffcanvas" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <svg width="30" height="30" class="hamburger-icon">
+                    <use href="/assets/icons.svg#navbar-icon"></use>
+                </svg>
+            </button>
+        </div><!-- .container-fluid -->
+    </nav><!-- .navbar  -->
+    <!-- OffCanvas Mobile -->
+    <div class="offcanvas offcanvas-end" id="navOffcanvas" tabindex="-1" aria-labelledby="offcanvasLabel"
+        data-bs-backdrop="false" data-bs-scroll="true">
+        <div class="offcanvas-header">
+            <img src="/img/logo.png" alt="Duck Logo">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav mb-2">
+                <li class="nav-item">
+                    <a class="nav-link active offcanvas-nav-link" aria-current="page" href="#top">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link offcanvas-nav-link" href="#punti-di-forza">I punti di forza</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link offcanvas-nav-link" href="#recensioni">Recensioni</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link offcanvas-nav-link" href="#paperelle">Paperelle</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link offcanvas-nav-link" href="#faqs">FAQs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link offcanvas-nav-link" href="#newsletter">Newsletter</a>
+                </li>
+            </ul>
+        </div>
+    </div><!-- #navOffcanvas-->
+    <header>
         <!-- TODO area hero con titolo, descrizione e bottone di acquisto 2 immagini affiancate che si mettono in colonna su mobile-->
         <section class="hero container-fluid align-items-center m-0 p-0">
             <div class="hero-images row m-0 p-0">
@@ -367,25 +367,25 @@
         </section><!-- .collection-area -->
         <!-- TODO area FAQ con accordion -->
         <section class="mx-auto container" id="faqs">
+            <h2 class="text-center mb-4">FAQs</h2>
             <div class="row align-items-start">
                 <div class="container my-5 col-md-6 col-12 mx-0 p-0">
                     <img src="/img/single-image2.png" alt="FAQ Image" class="img-fluid" />
                 </div>
                 <div class="container my-5 col-md-6 col-12 mx-0 p-0">
-                    <h2 class="text-center mb-4">Domande Frequenti</h2>
                     <div class="accordion duck-faqs-accordion" id="faqAccordion">
                         <!-- FAQ items will go here -->
-                        <div class="accordion-item">
+                        <div class="accordion-item duck-faqs-accordion-item">
                             <h2 class="accordion-header" id="faqHeadingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqCollapseOne" aria-expanded="true"
+                                <button class="accordion-button accordion-duck-faqs-button" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#faqCollapseOne" aria-expanded="true"
                                     aria-controls="faqCollapseOne">
                                     Come posso utilizzare la paperella di gomma per il debugging?
                                 </button>
                             </h2>
                             <div id="faqCollapseOne" class="accordion-collapse collapse show"
                                 aria-labelledby="faqHeadingOne" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
+                                <div class="accordion-body accordion-duck-faqs-body">
                                     Il rubber duck debugging è semplice: spiega il tuo codice alla paperella di gomma
                                     come
                                     se fosse un collega. Descrivendo ogni passo, potresti individuare errori o capire
@@ -393,29 +393,29 @@
                                     il problema. La paperella non risponde, ma ti aiuta a chiarire i tuoi pensieri.
                                 </div>
                             </div>
-                        </div><!-- .accordion-item -->
-                        <div class="accordion-item">
+                        </div><!-- .accordion-item duck-faqs-accordion-item -->
+                        <div class="accordion-item duck-faqs-accordion-item">
                             <h2 class="accordion-header" id="faqHeadingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqCollapseTwo" aria-expanded="false"
+                                <button class="accordion-button accordion-duck-faqs-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#faqCollapseTwo" aria-expanded="false"
                                     aria-controls="faqCollapseTwo">
                                     Quali sono i vantaggi di usare una paperella di gomma per i programmatori?
                                 </button>
                             </h2>
                             <div id="faqCollapseTwo" class="accordion-collapse collapse" aria-labelledby="faqHeadingTwo"
                                 data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
+                                <div class="accordion-body accordion-duck-faqs-body">
                                     La paperella di gomma aiuta i programmatori a pensare in modo critico e a
                                     verbalizzare i
                                     problemi. Questo processo può portare a nuove intuizioni e soluzioni. Inoltre, è un
                                     ottimo strumento antistress e aggiunge un tocco di personalità alla scrivania.
                                 </div>
                             </div>
-                        </div><!-- .accordion-item -->
-                        <div class="accordion-item">
+                        </div><!-- .accordion-item duck-faqs-accordion-item -->
+                        <div class="accordion-item duck-faqs-accordion-item">
                             <h2 class="accordion-header" id="faqHeadingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqCollapseThree" aria-expanded="false"
+                                <button class="accordion-button accordion-duck-faqs-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#faqCollapseThree" aria-expanded="false"
                                     aria-controls="faqCollapseThree">
                                     Posso usare la paperella di gomma indipendentemente dal linguaggio di programmazione
                                     che
@@ -424,7 +424,7 @@
                             </h2>
                             <div id="faqCollapseThree" class="accordion-collapse collapse"
                                 aria-labelledby="faqHeadingThree" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
+                                <div class="accordion-body accordion-duck-faqs-body">
                                     Assolutamente sì! La paperella di gomma è universale e funziona con qualsiasi
                                     linguaggio
                                     di programmazione. Non importa se stai scrivendo in Python, Java, C++ o qualsiasi
@@ -432,25 +432,25 @@
                                     linguaggio, la paperella sarà sempre pronta ad ascoltarti.
                                 </div>
                             </div>
-                        </div><!-- .accordion-item -->
-                        <div class="accordion-item">
+                        </div><!-- .accordion-item duck-faqs-accordion-item -->
+                        <div class="accordion-item duck-faqs-accordion-item">
                             <h2 class="accordion-header" id="faqHeadingFour">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faqCollapseFour" aria-expanded="false"
+                                <button class="accordion-button accordion-duck-faqs-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#faqCollapseFour" aria-expanded="false"
                                     aria-controls="faqCollapseFour">
                                     Quanto dettagliatamente devo spiegare il mio codice alla paperella di gomma?
                                 </button>
                             </h2>
                             <div id="faqCollapseFour" class="accordion-collapse collapse"
                                 aria-labelledby="faqHeadingFour" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
+                                <div class="accordion-body accordion-duck-faqs-body">
                                     Dovresti spiegare ogni dettaglio del tuo codice. Più sei dettagliato, più è
                                     probabile
                                     che tu scopra errori o ottenga nuove prospettive. Questo processo ti costringe a
                                     rivedere attentamente ogni parte del tuo lavoro.
                                 </div>
                             </div>
-                        </div><!-- .accordion-item -->
+                        </div><!-- .accordion-item duck-faqs-accordion-item -->
                     </div><!-- .accordion -->
                 </div><!-- .container #faqs -->
             </div><!-- .row align-items-start -->
@@ -483,7 +483,7 @@
             </div>
         </section><!-- .container #bullet-points -->
         <!-- TODO area newsletter con form -->
-        <section class="container my-5 row mx-auto col-12 col-lg-6" id="newsletter">
+        <section class="container my-5 row mx-auto col-12 col-lg-6 focus-background" id="newsletter">
             <div class="col-12 col-md-6 mx-auto text-center p-4">
                 <h2>Iscriviti alla nostra Newsletter</h2>
                 <p>Rimani aggiornato sulle ultime novità, offerte esclusive e consigli utili sul debugging con la
@@ -492,7 +492,7 @@
                     id="newsletter-form">
                     <input type="email" class="form-control mb-3 mb-md-0 me-md-3" placeholder="Inserisci la tua email"
                         required>
-                    <button type="submit" class="newsletter-button">
+                    <button type="submit" class="newsletter-button" title="Iscriviti">
                         <svg class="newsletter-icon-svg">
                             <use href="/assets/icons.svg#send"></use>
                         </svg>
@@ -501,11 +501,39 @@
             </div>
         </section><!-- .container #newsletter -->
 
+
+        <!-- TODO aggiungere social -->
+        <footer class="bg-body-tertiary text-center py-4 focus-background"">
+            <section class="social-icons mb-3">
+                <a href="#" class="me-3">
+                    <svg class="social-icon">
+                        <use href="/assets/icons.svg#facebook"></use>
+                    </svg>
+                </a>
+                <a href="#" class="me-3">
+                    <svg class="social-icon">
+                        <use href="/assets/icons.svg#twitter"></use>
+                    </svg>
+                </a>
+                <a href="#" class="me-3">
+                    <svg class="social-icon">
+                        <use href="/assets/icons.svg#youtube"></use>
+                    </svg>
+                </a>
+                <a href="#" class="me-3">
+                    <svg class="social-icon">
+                        <use href="/assets/icons.svg#linkedin"></use>
+                    </svg>
+                </a>
+                <a href="#" class="me-3">
+                    <svg class="social-icon">
+                        <use href="/assets/icons.svg#instagram"></use>
+                    </svg>
+                </a>
+            </section>
+            <p>&copy; 2024 BooLanding Product. Designed by Boolean.</p>
+        </footer>
     </main><!-- .container-fluid -->
-    <!-- TODO aggiungere social -->
-    <footer class="bg-body-tertiary text-center py-4">
-        <p>&copy; 2024 Rubber Duck Debugging. Tutti i diritti riservati.</p>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
